add shipping data to product

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -5,6 +5,10 @@
   data-item-description="High-quality model of a cat printed using low force stereolithography"
   data-item-image="/assets/images/cat-1.jpg"
   data-item-name="Cat Model"
+  data-item-weight="115"
+  data-item-length="8"
+  data-item-height="8"
+  data-item-width="5"	
   href="#">
   Buy now
 </a>
